fixed horizontal scroll issue

--- a/src/JsonForm/css/JsonForm.scss
+++ b/src/JsonForm/css/JsonForm.scss
@@ -23,7 +23,7 @@
 
         .splitter-layout {
             width: 95% !important;
-            height: 80% !important;
+            height: 70% !important;
 
             .layout-pane {
                 display: block !important;
